Updated formating Errors 7/24

--- a/references.bib
+++ b/references.bib
@@ -8,7 +8,15 @@
   year={1997},
   publisher={MIT press}
 }
-
+@article{van2020review,
+  title={A review on the long short-term memory model},
+  author={Van Houdt, Greg and Mosquera, Carlos and N{\'a}poles, Gonzalo},
+  journal={Artificial Intelligence Review},
+  volume={53},
+  pages={5929--5955},
+  year={2020},
+  publisher={Springer}
+}
 @article{sherstinsky2020fundamentals,
   title={Fundamentals of recurrent neural network (RNN) and long short-term memory (LSTM) network},
   author={Sherstinsky, Alex},
@@ -18,7 +26,6 @@
   year={2020},
   publisher={Elsevier}
 }
-
 @inproceedings{zhu2019novel,
   title={A novel LSTM-GAN algorithm for time series anomaly detection},
   author={Zhu, Guangxuan and Zhao, Hongbo and Liu, Haoqiang and Sun, Hua},
@@ -27,7 +34,6 @@
   year={2019},
   organization={IEEE}
 }
-
 @inproceedings{wadhvani2017review,
   title={Review on various models for time series forecasting},
   author={Wadhvani, Rajesh and others},
@@ -36,8 +42,6 @@
   year={2017},
   organization={IEEE}
 }
-
-
 @inproceedings{mo2016model,
   title={A model of oil price forecasting based on autoregressive and moving average},
   author={Mo, Zhou and Tao, Han},
@@ -46,7 +50,6 @@
   year={2016},
   organization={IEEE}
 }
-
 @inproceedings{ge2016short,
   title={Short-term ocean wave forecasting using an autoregressive moving average model},
   author={Ge, Ming and Kerrigan, Eric C},
@@ -55,8 +58,6 @@
   year={2016},
   organization={IEEE}
 }
-
-
 @article{ho1998use,
   title={The use of ARIMA models for reliability forecasting and analysis},
   author={Ho, Siu Lau and Xie, Min},
@@ -67,14 +68,12 @@
   year={1998},
   publisher={Elsevier}
 }
-
 @book{vapnik1999nature,
   title={The nature of statistical learning theory},
   author={Vapnik, Vladimir},
   year={1999},
   publisher={Springer science \& business media}
 }
-
 @inproceedings{hecht1989theory,
   title={Theory of the backpropagation neural network},
   author={Hecht, Nielsen and others},
@@ -83,7 +82,6 @@
   pages={593--605},
   year={1989}
 }
-
 @article{li2011time,
   title={Time series prediction of mining subsidence based on a SVM},
   author={Li, Peixian and Tan, Zhixiang and Yan, Lili and Deng, Kazhong},
@@ -94,7 +92,6 @@
   year={2011},
   publisher={Elsevier}
 }
-
 @article{wang2017failure,
   title={Failure prediction using machine learning and time series in optical network},
   author={Wang, Zhilong and Zhang, Min and Wang, Danshi and Song, Chuang and Liu, Min and Li, Jin and Lou, Liqi and Liu, Zhuo},
@@ -105,7 +102,6 @@
   year={2017},
   publisher={Optica Publishing Group}
 }
-
 @article{crone2010feature,
   title={Feature selection for time series prediction--A combined filter and wrapper approach for neural networks},
   author={Crone, Sven F and Kourentzes, Nikolaos},
@@ -116,7 +112,6 @@
   year={2010},
   publisher={Elsevier}
 }
-
 @inproceedings{bone2003boosting,
   title={Boosting recurrent neural networks for time series prediction},
   author={Bon{\'e}, Romuald and Assaad, Mohammad and Crucianu, Michel},
@@ -125,7 +120,6 @@
   year={2003},
   organization={Springer}
 }
-
 @inproceedings{wang2019prediction,
   title={Prediction of PM 2.5 concentration in Chengdu based on optimized BP neural network},
   author={Wang, Yuxiang},
@@ -133,7 +127,6 @@
   pages={30--31},
   year={2019}
 }
-
 @inproceedings{chen2016daily,
   title={Daily ETC traffic flow time series prediction based on k-NN and BP neural network},
   author={Chen, Yanjing and Zhao, Yawei and Yan, Peng},
@@ -142,7 +135,6 @@
   year={2016},
   organization={Springer}
 }
-
 @article{li2019water,
   title={Water quality prediction based on recurrent neural network and improved evidence theory: a case study of Qiantang River, China},
   author={Li, Lei and Jiang, Peng and Xu, Huan and Lin, Guang and Guo, Dong and Wu, Hui},
@@ -152,14 +144,12 @@
   year={2019},
   publisher={Springer}
 }
-
 @article{azzouni2017long,
   title={A long short-term memory recurrent neural network framework for network traffic matrix prediction},
   author={Azzouni, Abdelhadi and Pujolle, Guy},
   journal={arXiv preprint arXiv:1705.05690},
   year={2017}
 }
-
 @article{hu2020time,
   title={Time series prediction method based on variant LSTM recurrent neural network},
   author={Hu, Jiaojiao and Wang, Xiaofeng and Zhang, Ying and Zhang, Depeng and Zhang, Meng and Xue, Jianru},
@@ -169,7 +159,6 @@
   year={2020},
   publisher={Springer}
 }
-
 @article{greff2016lstm,
   title={LSTM: A search space odyssey},
   author={Greff, Klaus and Srivastava, Rupesh K and Koutn{\'\i}k, Jan and Steunebrink, Bas R and Schmidhuber, J{\"u}rgen},
@@ -190,7 +179,6 @@
   year={2001},
   publisher={IEEE}
 }
-
 @article{paul2021performance,
   title={Performance comparison of wavelets-based machine learning technique for forecasting agricultural commodity prices},
   author={Paul, Ranjit Kumar and Garai, Sandip},
@@ -201,4 +189,52 @@
   year={2021},
   publisher={Springer}
 }
-
+@article{yadav2020optimizing,
+  title={Optimizing LSTM for time series prediction in Indian stock market},
+  author={Yadav, Anita and Jha, CK and Sharan, Aditi},
+  journal={Procedia Computer Science},
+  volume={167},
+  pages={2091--2100},
+  year={2020},
+  publisher={Elsevier}
+}
+@article{karim2017lstm,
+  title={LSTM fully convolutional networks for time series classification},
+  author={Karim, Fazle and Majumdar, Somshubra and Darabi, Houshang and Chen, Shun},
+  journal={IEEE access},
+  volume={6},
+  pages={1662--1669},
+  year={2017},
+  publisher={IEEE}
+}
+@article{karevan2020transductive,
+  title={Transductive LSTM for time-series prediction: An application to weather forecasting},
+  author={Karevan, Zahra and Suykens, Johan AK},
+  journal={Neural Networks},
+  volume={125},
+  pages={1--9},
+  year={2020},
+  publisher={Elsevier}
+}
+@article{huang2015bidirectional,
+  title={Bidirectional LSTM-CRF models for sequence tagging},
+  author={Huang, Zhiheng and Xu, Wei and Yu, Kai},
+  journal={arXiv preprint arXiv:1508.01991},
+  year={2015}
+}
+@inproceedings{yamak2019comparison,
+  title={A comparison between arima, lstm, and gru for time series forecasting},
+  author={Yamak, Peter T and Yujian, Li and Gadosey, Pius K},
+  booktitle={Proceedings of the 2019 2nd international conference on algorithms, computing and artificial intelligence},
+  pages={49--55},
+  year={2019}
+}
+@article{chimmula2020time,
+  title={Time series forecasting of COVID-19 transmission in Canada using LSTM networks},
+  author={Chimmula, Vinay Kumar Reddy and Zhang, Lei},
+  journal={Chaos, solitons \& fractals},
+  volume={135},
+  pages={109864},
+  year={2020},
+  publisher={Elsevier}
+}
