--- a/index.qmd
+++ b/index.qmd
@@ -19,8 +19,6 @@ execute:
 
 Recurrent Neural Networks (RNNs) are one of the most popular data-driven approaches used for time-series prediction. RNNs benefit from feedback loops which makes the output of RNN in one time step to be seen as an input in the subsequent one. Having information in a sequential form, the input of the RNN in each time step includes the information of the corresponding time step in the sequence and the previous information provided by a feedback loop[@karevan2020transductive]. Recurrent networks have the capability to use feedback connections, enabling them to store recent input events as short-term memory, distinct from the long-term memory represented by slowly changing weights. This feature is highly valuable for various applications, such as speech processing, non-Markovian control, Time Series analysis, and music composition. However, the most widely used algorithms for learning short-term memory suffer from time-consuming processes and limited effectiveness, particularly when dealing with long time lags between inputs and corresponding signals. Despite the theoretical appeal, existing methods do not offer clear practical advantages over backpropagation in feed-forward nets with limited time windows. As a solution to these challenges, the "Long Short Term Memory" (LSTM) presents a novel recurrent network architecture in conjunction with an appropriate gradient-based learning algorithm [@hochreiter1997long].
 
-A RNN maintains a memory based on history information, which enables the model to predict the current output conditioned on long distance features[@huang2015bidirectional].Recurrent networks can in principle use their feedback connections to store representations of recent input events in form of activation's ("short-term memory", as opposed to "long-term memory embodied by slowly changing weights). The most widely used algorithms for learning what to put in short-term memory, however, take too much time or do not work well at all, especially when minimal time lags between inputs and corresponding teacher signals are long. With conventional"Back-Propagation Through Time" or "Real-Time Recurrent Learning", error signals "flowing backwards in time" tend to either (1) blow up or (2) vanish: the temporal evolution of the back-propagated error exponentially depends on the size of the weights. Case (1) may lead to oscillating weights, while in case (2) learning to bridge long time lags takes a prohibitive amount of time, or does not work at all.
-
 Long Short-Term Memory(LSTM), a novel recurrent network architecture in conjunction with an appropriate gradient based learning algorithm comes up as a remedy to solve this problem. It can learn to bridge time intervals in excess of 1000 steps even in case of noisy, in-compressible input sequences, without loss of short term time lag capabilities. This is achieved by an efficient, gradient-based algorithm for an architecture enforcing constant error flow through internal states of special units [@hochreiter1997long]. LSTM, standing for Long Short-Term Memory, is a gated Recurrent Neural Network (RNN) [@sherstinsky2020fundamentals] specifically designed to address issues related to long-term dependencies and the problems of gradient vanishing or exploding present in traditional RNNs. By incorporating forget gates, input gates, and output gates, LSTM can selectively retain crucial information from time series data based on its features while disregarding irrelevant information. This selective retention enhances LSTM's capability in processing time series data effectively. Recurrent neural networks with Long Short-term Memory have emerged as an effective and scalable model for several learning problems related to sequential data. The central idea behind the LSTM architecture is a memory cell which can maintain its state over time, and non-linear gating units which regulate the information flow into and out of the cell. Most modern studies incorporate many improvements that have been made to the LSTM architecture since its original formulation.However, LSTM's are now applied to many learning problems which differ significantly in scale and nature from the problems that these improvements were initially tested on[@greff2016lstm].
 
 The significance of LSTM is evident in its widespread application across various domains of time series data processing. For instance, LSTM has been utilized in tasks like text categorization, sentence generation, and machine translation [@zhu2019novel]. Time series data, which refers to a collection of observations arranged chronologically, holds valuable decision support potential. Time series forecasting has attracted significant attention, and traditional methods for time series prediction can be categorized into linear and nonlinear models. Early on, linear models like Auto-Regressive (AR), Moving Average (MA), and Auto-Regressive Moving Average (ARMA) were proposed for time series forecasting [@wadhvani2017review][@mo2016model][@ge2016short]. While computationally simple and effective for stationary time series data, their predictive accuracy is limited when dealing with non-stationary data. To address this limitation, the Auto-Regressive Integrated Moving Average (ARIMA) model was introduced [@ho1998use], which combines differencing operations to handle non-stationary data.
@@ -33,7 +31,7 @@ A critical area of machine learning is Time Series forecasting, as various forec
 
 Recurrent Neural Networks, often shortened to RNNs, are a class of neural networks which exhibit temporal behavior due to directed connections between units of an individual layer. Recurrent neural
 
-networks maintain a hidden vector **h**, which is updated at time step *t* as follows:
+networks maintain a hidden vector **h**, which is updated at time step ***t*** as follows:
 
 $$ h_t = tanh(Wh_{t-1}+Ix_t)$$ where tanh is the hyperbolic tangent function. **W** is the recurrent weight matrix and **I** is a projection matrix. The hidden state **h** is used to make a prediction
 
@@ -83,8 +81,6 @@ The weather forecasting dataset for Indian climate in the city of Delhi, India, 
 
 ```{r}
 library(tidyverse) # importing, cleaning, visualising 
-# library(tidytext) # working with text
-library(keras) # deep learning with keras
 library(ggplot2)
 mean_temp <- read.csv("DailyDelhiMeanTemp.csv")
 ```
